--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <!--Grid column-->
                             <div class="col-md-1 col-md-5 d-flex  ml-auto">
                                 <div class="text-center">
-                                    <button type="button" class="btn btn-grey btn-rounded z-depth-1a waves-effect waves-light">Send</button>
+                                    <button type="button" class="btn btn-grey btn-rounded z-depth-1a waves-effect waves-light" id="click">Send</button>
                                 </div>
                             </div>
                             <!--Grid column-->
@@ -80,4 +80,5 @@
     </div>
     </div>
 </section>
+<script src="./app.js"></script>
 </body>
