fix image error

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- about me -->
 <section><div class="content">
-    <img src="/pool.jpeg" alt="" style="width:100%">
+    <img src="./pool.jpeg" alt="" style="width:100%">
     <h1>ABOUT ME</h1>
     <p class="bonjour">Bonjour, i'm MILHAN OMAR OSMAN learning how to program and also a student of Moringa School.Being a Software Enginner was never my dream but i was inspired by my older brother who was always intrested and love codding,seeing him code and do some other stuffs made me want to do cooding and honestly its cool typing in fast yeah thats it cooding fantanstic so far.
 </p>
